# smartclm-eval

./: .env template  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rag-test-pipeline.ipynb  rag_pipeline.py  smart_clm_rag_pipeline.ipynb
docs/1. NDA/: ~$_비밀유지계약서.docx  검토_비밀유지계약서.docx  초안_비밀유지계약서.docx
docs/2. 제품(서비스) 판매/: 검토_제품(서비스) 판매 계약서.docx  초안_제품(서비스) 판매 계약서.docx
processed/: 개인정보 보호법(법률)(제19234호)(20250313)_law_parsed.json  검토_비밀유지계약서_standard_contract_parsed.json  초안_비밀유지계약서_standard_contract_parsed.json
processed/executed_contract/: (주)알파솔루션_비밀유지계약서_parsed.json
processed/law/: 근로기준법(법률)(제20520호)(20250223)_parsed.json  노동조합 및 노동관계조정법(법률)(제17864호)(20210706)_parsed.json  대ㆍ중소기업 상생협력 촉진에 관한 법률(법률)(제20982호)(20250527)_parsed.json  독점규제 및 공정거래에 관한 법률(법률)(제20711호)(20250422)_parsed.json  법인세법(법률)(제20613호)(20250701)_parsed.json  부정경쟁방지 및 영업비밀보호에 관한 법률(법률)(제20321호)(20240821)_parsed.json  상법(법률)(제20436호)(20250131)_parsed.json  (+5 more)
results/: chain_analysis_초안_비밀유지계약서_20250716_102123.json  chain_analysis_초안_비밀유지계약서_20250716_102519.json  chain_analysis_초안_비밀유지계약서_20250716_103116.json  chain_analysis_초안_비밀유지계약서_20250716_103951.json  chain_analysis_초안_비밀유지계약서_20250716_104453.json  chain_analysis_초안_비밀유지계약서_20250716_104751.json  chain_analysis_초안_비밀유지계약서_20250716_105018.json  chain_analysis_초안_비밀유지계약서_20250716_105631.json  contract_review_results_20250716_092233.json  contract_review_results_20250716_100405.json  processing_summary.json  search_test_results_20250716_090400.json  search_test_results_20250716_090723.json
src/: main.py
src/auth/: router.py  (+4 more)
(+66 files in other folders)
